--- a/OWCE/OWCE/Views/BatteryView.xaml
+++ b/OWCE/OWCE/Views/BatteryView.xaml
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView" xmlns:views="clr-namespace:OWCE.Views" x:Class="OWCE.Views.BatteryView">
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView" xmlns:views="clr-namespace:OWCE.Views" xmlns:converters="clr-namespace:OWCE.Converters" x:Class="OWCE.Views.BatteryView">
+    <ContentView.Resources>
+        <converters:QuartVoltageConverter x:Key="quartVoltageConverter" />
+    </ContentView.Resources>
 
     <yummy:PancakeView x:Name="MainView" BackgroundColor="#FFFF00" Style="{StaticResource BoardDetailBlockBaseStyle}" >
 
@@ -11,8 +14,9 @@
                     <BoxView x:Name="BatteryBar" BackgroundColor="#FF00FF" VerticalOptions="Fill" HorizontalOptions="Start" WidthRequest="100" />
 
 
-                    <Label Text="BATTERY" FontFamily="SairaExtraCondensed-Bold" TextColor="White" CharacterSpacing="0.26" FontSize="16" Margin="20,6,0,0" />
-                    <Label Text="{Binding BatteryPercent, StringFormat='{0}%'}"  TextColor="White"  FontFamily="SairaExtraCondensed-Black" FontSize="80" HorizontalOptions="Center" VerticalOptions="Start"  />
+                    <Label Text="BATTERY (Quart)" FontFamily="SairaExtraCondensed-Bold" TextColor="White" CharacterSpacing="0.26" FontSize="16" Margin="20,6,0,0" />
+                    <Label Text="{Binding BatteryVoltage, Converter={StaticResource quartVoltageConverter}}"  TextColor="White"  FontFamily="SairaExtraCondensed-Black" FontSize="80" HorizontalOptions="Center" VerticalOptions="Start"  />
+                    <!--<Label Text="{Binding BatteryPercent, StringFormat='{0}%'}"  TextColor="White"  FontFamily="SairaExtraCondensed-Black" FontSize="80" HorizontalOptions="Center" VerticalOptions="Start"  />-->
 
                     <Label VerticalOptions="End" Margin="20,0">
                         <Label.FormattedText>
