--- a/OWCE/OWCE/Pages/BoardPage.xaml
+++ b/OWCE/OWCE/Pages/BoardPage.xaml
@@ -86,6 +86,9 @@
                 <views:AngleView IsVisible="false" BindingContext="{Binding .}" Pitch="{Binding Pitch}" Yaw="{Binding Yaw}" Roll="{Binding Roll}"   />
                 <views:FootpadsView IsVisible="false" />
                 -->
+                <Button Text="Turn SS ON" TextColor="#000000" FontSize="36" Clicked="SetSimpleStop_On"/>
+                <Button Text="Turn SS OFF" TextColor="#000000" FontSize="36" Clicked="SetSimpleStop_Off"/>
+
                 <Grid Padding="20,0">
                     <Label Grid.Row="0" Grid.Column="0" Text="Serial number" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
                     <Label Grid.Row="1" Grid.Column="0" Text="Battery serial number" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
