--- a/OWCE/OWCE/Pages/BoardPage.xaml
+++ b/OWCE/OWCE/Pages/BoardPage.xaml
@@ -103,6 +103,7 @@
                     <Label Grid.Row="6" Grid.Column="0" Text="Trip Revs" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
                     <Label Grid.Row="7" Grid.Column="0" Text="Max RPM" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
                     <Label Grid.Row="8" Grid.Column="0" Text="Max Speed" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
+                    <Label Grid.Row="9" Grid.Column="0" Text="Batt Percent" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" />
 
                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding SerialNumber}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
                     <Label Grid.Row="1" Grid.Column="1" Text="{Binding BatterySerial}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
@@ -113,6 +114,7 @@
                     <Label Grid.Row="6" Grid.Column="1" Text="{Binding TripOdometer}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
                     <Label Grid.Row="7" Grid.Column="1" Text="{Binding MaxRPM}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
                     <Label Grid.Row="8" Grid.Column="1" Text="{Binding MaxRPM, Converter={StaticResource rpmToSpeedConverter}, ConverterParameter={Binding WheelCircumference}, StringFormat='{0:F1}'}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
+                    <Label Grid.Row="9" Grid.Column="1" Text="{Binding BatteryPercent, StringFormat='{0}%'}" FontFamily="SairaExtraCondensed-SemiBold" FontSize="16" TextColor="#7F7F7F" HorizontalOptions="End" />
                 </Grid>
             </StackLayout>
         </ScrollView>
